Facory girl & database cleaner gems, RSpec configuration

--- a/config/database.yml
+++ b/config/database.yml
@@ -9,3 +9,9 @@ development:
   database: db_development
   encoding: SQL_ASCII
   pool: 5
+  
+test:
+  adapter: postgresql
+  database: db_test
+  encoding: SQL_ASCII
+  pool: 5
